[metadata]
name = nskit
version = 1.0.0
author = Artem Mukanov
url = https://github.com/Arty40m/nskit
description = Library for processing nucleic acid secondary structure
long_description = file: README.md
license = LGPLv3
classifiers =
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)

[options]
zip_safe=False
include_package_data = True
packages = find:
python_requires = >= 3.8
install_requires =
    numpy>=1.18
    
[options.extras_require]
dev =
    pytest